--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
           </ul>
         </nav>
     </div>
+    <div class="date">
+      <div class="year">March 19th 2021</div>
+      <div class="time">09: 25: 32 am</div>
+    </div>
 
     <section id="liststack">
       <div class="book-container">
@@ -25,7 +29,6 @@
       <div class="booklist">
       </div>
       </div>
-      <!-- <ul class="bookstack"></ul> -->
     </section>
 
     <section id="addbook-section" class="hide-content">
@@ -63,5 +66,6 @@
   </footer>
 
     <script type="module" src="./index.js"></script>
+    <script src="luxon.js"></script>
 </body>
 </html>
