install luxon as a module

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </ul>
         </nav>
     </div>
-    <div class="date">
+    <div class="date" id="datetime">
       <div class="year">March 19th 2021</div>
       <div class="time">09: 25: 32 am</div>
     </div>
